--- a/.github/workflows/build-gnu.yml
+++ b/.github/workflows/build-gnu.yml
@@ -84,6 +84,8 @@ jobs:
       # Build
       - name: Rust build
         run: |
+          find . -name '*.deb' | xargs rm -rf
+          find . -name '*.rpm' | xargs rm -rf
           sudo apt update && sudo apt install -y rpm
           cargo install cargo-deb
           cargo install cargo-rpm
