--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -93,7 +93,7 @@ jobs:
           cargo build --target ${target} --release
           for app in server poweroff programmer; do
             ${prefix}-strip -s target/${target}/release/pisugar-${app}
-            cargo deb --no-build --no-strip --target $target --manifest-path=pisugar-${app}/Cargo.toml
+            cargo deb --no-build --no-strip --target $target -p pisugar-${app}
             (cd pisugar-${app} && cargo rpm build --target ${target})
           done
 
