--- a/.github/workflows/build-gnu.yml
+++ b/.github/workflows/build-gnu.yml
@@ -97,7 +97,7 @@ jobs:
           cross build --target $target --release
           for app in server poweroff programmer; do
             ${prefix}-strip -s target/${target}/release/pisugar-${app}
-            cargo deb --no-build --no-strip --target $target --manifest-path=pisugar-${app}/Cargo.toml
+            cargo deb --no-build --no-strip --target $target -p pisugar-${app}
             (cd pisugar-${app} && cargo rpm build --target ${target})
           done
 
