--- a/.github/workflows/build-gnu.yml
+++ b/.github/workflows/build-gnu.yml
@@ -10,15 +10,15 @@ jobs:
     strategy:
       matrix:
         target:
-          - aarch64-unknown-linux-gnu
-          - arm-unknown-linux-gnueabi
-          - arm-unknown-linux-gnueabihf
+          # - aarch64-unknown-linux-gnu
+          # - arm-unknown-linux-gnueabi
+          # - arm-unknown-linux-gnueabihf
           #- armv5te-unknown-linux-gnueabi
           #- armv7-unknown-linux-gnueabi
           #- armv7-unknown-linux-gnueabihf
           #- i586-unknown-linux-gnu
           - i686-unknown-linux-gnu
-          #- mips-unknown-linux-gnu
+          - mips-unknown-linux-gnu
           #- mips64-unknown-linux-gnuabi64
           #- mips64el-unknown-linux-gnuabi64
           #- mipsel-unknown-linux-gnu not work
