--- a/.github/workflows/build-gnu.yml
+++ b/.github/workflows/build-gnu.yml
@@ -18,7 +18,7 @@ jobs:
           #- armv7-unknown-linux-gnueabihf
           #- i586-unknown-linux-gnu
           - i686-unknown-linux-gnu
-          - mips-unknown-linux-gnu
+          # - mips-unknown-linux-gnu
           #- mips64-unknown-linux-gnuabi64
           #- mips64el-unknown-linux-gnuabi64
           #- mipsel-unknown-linux-gnu not work
