--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -44,7 +44,7 @@ jobs:
         env:
           target: ${{ matrix.target }}
         run: |
-          apt update && apt install -y axel
+          audo apt update && sudo apt install -y axel
 
           if ! test -d /opt/arm-linux-musleabi-cross/bin; then
             wget https://more.musl.cc/$(uname -m)-linux-musl/arm-linux-musleabi-cross.tgz
