--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -38,40 +38,17 @@ jobs:
             /opt/arm-linux-musleabihf-cross
             /opt/aarch64-linux-musl-cross
           key: ${{ runner.os }}-build-arm
+          restore-keys: |
+            musl-cc-cache
 
       # Musl gcc
       - name: Download musl gcc
         env:
           target: ${{ matrix.target }}
         run: |
-          sudo apt update && sudo apt install -y axel
-
-          if ! test -d /opt/arm-linux-musleabi-cross/bin; then
-            wget https://more.musl.cc/$(uname -m)-linux-musl/arm-linux-musleabi-cross.tgz
-            axel -xvf arm-linux-musleabi-cross.tgz
-            mv arm-linux-musleabi-cross /opt/
-          fi
           echo /opt/arm-linux-musleabi-cross/bin >> $GITHUB_PATH
-
-          if ! test -d /opt/arm-linux-musleabihf-cross/bin; then
-            axel https://more.musl.cc/$(uname -m)-linux-musl/arm-linux-musleabihf-cross.tgz
-            tar -xvf arm-linux-musleabihf-cross.tgz
-            mv arm-linux-musleabihf-cross /opt/
-          fi
           echo /opt/arm-linux-musleabihf-cross/bin >> $GITHUB_PATH
-
-          if ! test -d /opt/aarch64-linux-musl-cross/bin; then
-            axel https://more.musl.cc/$(uname -m)-linux-musl/aarch64-linux-musl-cross.tgz
-            tar -xvf aarch64-linux-musl-cross.tgz
-            mv aarch64-linux-musl-cross /opt/
-          fi
           echo /opt/aarch64-linux-musl-cross/bin >> $GITHUB_PATH
-
-          if ! test -d /opt/x86_64-linux-musl-cross/bin; then
-            axel https://more.musl.cc/$(uname -m)-linux-musl/x86_64-linux-musl-cross.tgz
-            tar -xvf x86_64-linux-musl-cross.tgz
-            mv x86_64-linux-musl-cross /opt/
-          fi
           echo /opt/x86_64-linux-musl-cross/bin >> $GITHUB_PATH
 
           arch=${target%%-*}
