--- a/.github/workflows/download-musl-cc.yml
+++ b/.github/workflows/download-musl-cc.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   download-musl:
     runs-on: ubuntu-latest
+    continue-on-error: false
     steps:
       - uses: actions/cache@v3
         with:
