--- a/.github/workflows/download-musl-cc.yml
+++ b/.github/workflows/download-musl-cc.yml
@@ -21,26 +21,34 @@ jobs:
         run: |
           sudo apt update && sudo apt install -y axel
 
-          if ! test -d /opt/arm-linux-musleabi-cross/bin; then
-            axel https://more.musl.cc/$(uname -m)-linux-musl/arm-linux-musleabi-cross.tgz
-            tar -xvf arm-linux-musleabi-cross.tgz
-            mv arm-linux-musleabi-cross /opt/
-          fi
+          for i in arm-linux-musleabi-cross arm-linux-musleabihf-cross aarch64-linux-musl-cross x86_64-linux-musl-cross; do
+            if ! test -d /opt/${i}/bin; then
+              wget http://musl.cc/${i}.tgz
+              tar -xvf ${i}.tgz
+              mv $i /opt/
+            fi
+          done
 
-          if ! test -d /opt/arm-linux-musleabihf-cross/bin; then
-            axel https://more.musl.cc/$(uname -m)-linux-musl/arm-linux-musleabihf-cross.tgz
-            tar -xvf arm-linux-musleabihf-cross.tgz
-            mv arm-linux-musleabihf-cross /opt/
-          fi
+          # if ! test -d /opt/arm-linux-musleabi-cross/bin; then
+          #   axel https://more.musl.cc/$(uname -m)-linux-musl/arm-linux-musleabi-cross.tgz
+          #   tar -xvf arm-linux-musleabi-cross.tgz
+          #   mv arm-linux-musleabi-cross /opt/
+          # fi
 
-          if ! test -d /opt/aarch64-linux-musl-cross/bin; then
-            axel https://more.musl.cc/$(uname -m)-linux-musl/aarch64-linux-musl-cross.tgz
-            tar -xvf aarch64-linux-musl-cross.tgz
-            mv aarch64-linux-musl-cross /opt/
-          fi
+          # if ! test -d /opt/arm-linux-musleabihf-cross/bin; then
+          #   axel https://more.musl.cc/$(uname -m)-linux-musl/arm-linux-musleabihf-cross.tgz
+          #   tar -xvf arm-linux-musleabihf-cross.tgz
+          #   mv arm-linux-musleabihf-cross /opt/
+          # fi
 
-          if ! test -d /opt/x86_64-linux-musl-cross/bin; then
-            axel https://more.musl.cc/$(uname -m)-linux-musl/x86_64-linux-musl-cross.tgz
-            tar -xvf x86_64-linux-musl-cross.tgz
-            mv x86_64-linux-musl-cross /opt/
-          fi
+          # if ! test -d /opt/aarch64-linux-musl-cross/bin; then
+          #   axel https://more.musl.cc/$(uname -m)-linux-musl/aarch64-linux-musl-cross.tgz
+          #   tar -xvf aarch64-linux-musl-cross.tgz
+          #   mv aarch64-linux-musl-cross /opt/
+          # fi
+
+          # if ! test -d /opt/x86_64-linux-musl-cross/bin; then
+          #   axel https://more.musl.cc/$(uname -m)-linux-musl/x86_64-linux-musl-cross.tgz
+          #   tar -xvf x86_64-linux-musl-cross.tgz
+          #   mv x86_64-linux-musl-cross /opt/
+          # fi
