--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -37,9 +37,7 @@ jobs:
             /opt/arm-linux-musleabi-cross
             /opt/arm-linux-musleabihf-cross
             /opt/aarch64-linux-musl-cross
-          key: ${{ runner.os }}-build-arm
-          restore-keys: |
-            musl-cc-cache
+          key: musl-cc-cache
 
       # Musl gcc
       - name: Download musl gcc
