--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -34,3 +34,9 @@ objcopy = { path = "aarch64-linux-musl-objcopy" }
 build-arm = "build --target arm-unknown-linux-musleabi"
 build-armhf = "build --target arm-unknown-linux-musleabihf"
 build-aarch64 = "build --target aarch64-unknown-linux-musl"
+deb-server-arm = "deb -p pisugar-server --target arm-unknown-linux-musleabi"
+deb-server-armhf = "deb -p pisugar-server --target arm-unknown-linux-musleabihf"
+deb-server-aarch64 = "deb -p pisugar-server --target aarch64-unknown-linux-musl"
+deb-poweroff-arm = "deb -p pisugar-poweroff --target arm-unknown-linux-musleabi"
+deb-poweroff-armhf = "deb -p pisugar-poweroff --target arm-unknown-linux-musleabihf"
+deb-poweroff-aarch64 = "deb -p pisugar-poweroff --target aarch64-unknown-linux-musl"
