--- a/.github/workflows/build-gnu.yml
+++ b/.github/workflows/build-gnu.yml
@@ -12,7 +12,7 @@ jobs:
         target:
           - aarch64-unknown-linux-gnu
           - arm-unknown-linux-gnueabi
-          - arm-unknown-linux-gnueabihf
+          # - arm-unknown-linux-gnueabihf
           #- armv5te-unknown-linux-gnueabi
           #- armv7-unknown-linux-gnueabi
           #- armv7-unknown-linux-gnueabihf
