ci: auto cancle previous workflow

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -5,6 +5,13 @@ on:
     branches: [master]
 
 jobs:
+  cancel-previous:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.10.0
+        with:
+          access_token: ${{ github.token }}
   build-web:
     uses: ./.github/workflows/build-web.yml
   download-musl-cc:
