--- a/pisugar-core/Cargo.toml
+++ b/pisugar-core/Cargo.toml
@@ -15,3 +15,4 @@ chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 hyper = {version ="0.14.10", features = ["full"]}
+anyhow = "1"
