--- a/pisugar-server/.rpm/config.json
+++ b/pisugar-server/.rpm/config.json
@@ -1,5 +1,7 @@
 {
-    "digest_auth": ["admin", "admin"],
+    "auth_user": null,
+    "auth_password": null,
+    "session_timeout": 3600,
     "i2c_bus": 1,
     "i2c_addr": null,
     "auto_wake_time": null,
@@ -12,11 +14,15 @@
     "long_tap_shell": "",
     "auto_shutdown_level": null,
     "auto_shutdown_delay": null,
-    "auto_charging_range": [
-        80.0,
-        100.0
-    ],
+    "auto_charging_range": null,
     "full_charge_duration": null,
-    "auto_power_on": false,
-    "auto_rtc_sync": false
+    "auto_power_on": null,
+    "soft_poweroff": null,
+    "soft_poweroff_shell": null,
+    "auto_rtc_sync": null,
+    "adj_comm": null,
+    "adj_diff": null,
+    "rtc_adj_ppm": null,
+    "anti_mistouch": null,
+    "bat_protect": null
 }
