--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -75,10 +75,10 @@ jobs:
           sudo apt-get install -y unzip
 
           if [ $(uname -m) == 'x86_64' ]; then
-            wget https://devtools.qiniu.com/qshell-v2.9.0-linux-amd64.tar.gz
+            wget https://github.com/qiniu/qshell/releases/download/v2.9.0/qshell-v2.9.0-linux-amd64.tar.gz
             tar -xvf qshell-v2.9.0-linux-amd64.tar.gz
           else
-            wget https://devtools.qiniu.com/qshell-v2.9.0-linux-386.tar.gz
+            wget https://github.com/qiniu/qshell/releases/download/v2.9.0/qshell-v2.9.0-linux-386.tar.gz
             tar -xvf qshell-v2.9.0-linux-386.tar.gz
           fi
           chmod +x qshell
