--- a/.github/workflows/release-qiniu.yml
+++ b/.github/workflows/release-qiniu.yml
@@ -9,35 +9,35 @@ jobs:
     name: "Upload to QiNiu"
     runs-on: "ubuntu-latest"
     steps:
-    - name: "Upload to QiNiu"
-      env:
-        QINIU_BUCKET: ${{ secrets.QINIU_BUCKET }}
-        QINIU_AK: ${{ secrets.QINIU_AK }}
-        QINIU_SK: ${{ secrets.QINIU_SK }}
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y unzip
+      - name: "Upload to QiNiu"
+        env:
+          QINIU_BUCKET: ${{ secrets.QINIU_BUCKET }}
+          QINIU_AK: ${{ secrets.QINIU_AK }}
+          QINIU_SK: ${{ secrets.QINIU_SK }}
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip
 
-        if [ $(uname -m) == 'x86_64' ]; then
-          wget https://devtools.qiniu.com/qshell-v2.7.0-linux-amd64.tar.gz
-          tar -xvf qshell-v2.7.0-linux-amd64.tar.gz
-        else
-          wget https://devtools.qiniu.com/qshell-v2.7.0-linux-386.tar.gz
-          tar -xvf qshell-v2.7.0-linux-386.tar.gz
-        fi
-        chmod +x qshell
-        ./qshell account -w ${QINIU_AK} ${QINIU_SK} deploy-account
-
-        curl https://api.github.com/repos/PiSugar/pisugar-power-manager-rs/releases/latest > latest
-
-        sudo apt-get install -y jq
-        for url in $(jq '.assets[].browser_download_url' latest); do
-          url=$(echo $url | awk -F '"' '{print $2}')
-          filename=${url##*/}
-          wget -O ${filename} ${url}
-          mimetype=application/octet-stream
-          if (echo "$filename" | grep '.*.sh$'); then
-            mimetype=text/plain
+          if [ $(uname -m) == 'x86_64' ]; then
+            wget https://github.com/qiniu/qshell/releases/download/v2.9.0/qshell-v2.9.0-linux-amd64.tar.gz
+            tar -xvf qshell-v2.9.0-linux-amd64.tar.gz
+          else
+            wget https://github.com/qiniu/qshell/releases/download/v2.9.0/qshell-v2.9.0-linux-386.tar.gz
+            tar -xvf qshell-v2.9.0-linux-386.tar.gz
           fi
-          ./qshell rput --overwrite --mimetype ${mimetype} ${QINIU_BUCKET} release/${filename} ${filename}
-        done
+          chmod +x qshell
+          ./qshell account -w ${QINIU_AK} ${QINIU_SK} deploy-account
+
+          curl https://api.github.com/repos/PiSugar/pisugar-power-manager-rs/releases/latest > latest
+
+          sudo apt-get install -y jq
+          for url in $(jq '.assets[].browser_download_url' latest); do
+            url=$(echo $url | awk -F '"' '{print $2}')
+            filename=${url##*/}
+            wget -O ${filename} ${url}
+            mimetype=application/octet-stream
+            if (echo "$filename" | grep '.*.sh$'); then
+              mimetype=text/plain
+            fi
+            ./qshell rput --overwrite --mimetype ${mimetype} ${QINIU_BUCKET} release/${filename} ${filename}
+          done
