--- a/.github/workflows/build-gnu.yml
+++ b/.github/workflows/build-gnu.yml
@@ -22,10 +22,10 @@ jobs:
           #- mips64-unknown-linux-gnuabi64
           #- mips64el-unknown-linux-gnuabi64
           #- mipsel-unknown-linux-gnu not work
-          - powerpc-unknown-linux-gnu
-          - powerpc64-unknown-linux-gnu
-          - powerpc64le-unknown-linux-gnu
-          - riscv64gc-unknown-linux-gnu
+          # - powerpc-unknown-linux-gnu
+          # - powerpc64-unknown-linux-gnu
+          # - powerpc64le-unknown-linux-gnu
+          # - riscv64gc-unknown-linux-gnu
           #- s390x-unknown-linux-gnu
           #- sparc64-unknown-linux-gnu
           #- thumbv7neon-unknown-linux-gnueabihf
