ci: update github action

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -48,6 +48,14 @@ jobs:
         with:
           name: pisugar-all
 
+      - name: Create archives
+        run: |
+          mkdir -p archives
+          cp -R target/* archives/
+          cp scripts/*.sh archives/
+          cp scripts/aur/*.tar.gz archives/
+          tar -czf archives.tar.gz archives
+
       # Development Release
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -57,6 +65,7 @@ jobs:
           prerelease: true
           draft: false
           files: |
+            archives.tar.gz
             target/**/*.deb
             target/**/*.rpm
             scripts/*.sh
