--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -79,18 +79,8 @@ assets = [
     "644",
   ],
   [
-    "../electron/dist/web/*",
+    "../pisugar-webui/dist/**/*",
     "usr/share/pisugar-server/web/",
-    "644",
-  ],
-  [
-    "../electron/dist/web/fonts/*",
-    "usr/share/pisugar-server/web/fonts",
-    "644",
-  ],
-  [
-    "../electron/dist/web/imgs/*",
-    "usr/share/pisugar-server/web/imgs",
     "644",
   ],
 ]
@@ -110,4 +100,4 @@ pisugar-server = { path = "/usr/bin/pisugar-server" }
 "pisugar-server.default" = { path = "/etc/default/pisugar-server" }
 "config.json" = { path = "/etc/pisugar-server/config.json" }
 "_ws.json" = { path = "/usr/share/pisugar-server/web/_ws.json" }
-"../../electron/dist/web/" = { path = "/usr/share/pisugar-server/web" }
+"../../pisugar-webui/dist/" = { path = "/usr/share/pisugar-server/web" }
