--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,9 @@
 [source.crates-io]
-replace-with = 'rsproxy'
+replace-with = 'rsproxy-sparse'
 
 [source.rsproxy]
 registry = "https://rsproxy.cn/crates.io-index"
+
 [source.rsproxy-sparse]
 registry = "sparse+https://rsproxy.cn/index/"
 
