--- a/pisugar-webui/package.json
+++ b/pisugar-webui/package.json
@@ -11,14 +11,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-i18n": "^8.28.2",
     "axios": "^0.21.2",
     "element-ui": "^2.11.1",
-    "moment": "^2.24.0",
-    "vue-native-websocket": "^2.0.13",
     "less": "^3.9.0",
-    "less-loader": "^5.0.0"
+    "less-loader": "^5.0.0",
+    "moment": "^2.24.0",
+    "vue": "^2.5.2",
+    "vue-i18n": "^8.28.2",
+    "vue-native-websocket": "^2.0.13"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
