--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -3,6 +3,10 @@ name: Master
 on:
   push:
     branches: [master]
+    tags:
+      - "v*"
+  pull_request:
+    branches: [master]
 
 jobs:
   cancel-previous:
@@ -12,23 +16,17 @@ jobs:
         uses: styfle/cancel-workflow-action@0.10.0
         with:
           access_token: ${{ github.token }}
+
   build-web:
     uses: ./.github/workflows/build-web.yml
-  download-musl-cc:
-    uses: ./.github/workflows/download-musl-cc.yml
-  build-musl:
-    needs:
-      - build-web
-      - download-musl-cc
-    uses: ./.github/workflows/build-musl.yml
-  build-gnu:
-    needs:
-      - build-web
-    uses: ./.github/workflows/build-gnu.yml
+
+  build-cross:
+    needs: build-web
+    uses: ./.github/workflows/build-cross.yml
+  
   build-other:
     needs:
-      - build-musl
-      - build-gnu
+      - build-cross
     uses: ./.github/workflows/build-other.yml
 
   dev-release:
@@ -46,7 +44,7 @@ jobs:
       - name: Download all
         uses: actions/download-artifact@v4
         with:
-          name: pisugar-all
+          path: downloads
 
       - name: Create archives
         run: |
@@ -66,12 +64,11 @@ jobs:
           draft: false
           files: |
             archives.tar.gz
-            target/**/*.deb
-            target/**/*.rpm
+            downloads/**/*
             scripts/*.sh
             scripts/aur/*.tar.gz
             !scripts/update-version.sh
-            pisugar-module.tar.gz
+            !scripts/install.sh
 
       # Upload QiNiu nightly
       - name: "Upload to QiNiu"
@@ -93,7 +90,7 @@ jobs:
           chmod +x qshell
           ./qshell account -w ${QINIU_AK} ${QINIU_SK} deploy-account
 
-          for f in $(find target -type f -name '*.deb') $(find target -type f -name '*.rpm') $(find scripts -name '*.tar.gz'); do
+          for f in $(find downloads -type f) $(find scripts -name '*.tar.gz'); do
             filename=${f##*/}
             key=nightly/${filename}
             ./qshell rput --overwrite ${QINIU_BUCKET} ${key} ${f}
