--- a/.github/workflows/build-cross.yml
+++ b/.github/workflows/build-cross.yml
@@ -14,10 +14,10 @@ jobs:
         target:
           - arm-unknown-linux-musleabihf
           - armv7-unknown-linux-musleabihf
-          # - aarch64-unknown-linux-musl
-          # - riscv64gc-unknown-linux-musl
-          # - i586-unknown-linux-musl
-          # - x86_64-unknown-linux-musl
+          - aarch64-unknown-linux-musl
+          - riscv64gc-unknown-linux-musl
+          - i586-unknown-linux-musl
+          - x86_64-unknown-linux-musl
     steps:
       # Checkout
       - name: Checkout
