--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -67,6 +67,7 @@ jobs:
           files: |
             archives.tar.gz
             downloads/**/*
+            !downloads/pisugar-webui/*
             scripts/*.sh
             scripts/aur/*.tar.gz
             !scripts/update-version.sh
@@ -85,6 +86,7 @@ jobs:
             !scripts/update-version.sh
             !scripts/install.sh
             downloads/**/*
+            !downloads/pisugar-webui/*
 
       # Upload QiNiu nightly
       - name: "Upload to QiNiu"
@@ -107,7 +109,7 @@ jobs:
           chmod +x qshell
           ./qshell account -w ${QINIU_AK} ${QINIU_SK} deploy-account
 
-          for f in $(find downloads -type f) $(find scripts -name '*.tar.gz'); do
+          for f in $(find downloads -type f '*.tar.gz') $(find downloads -type f '*.deb') $(find downloads -type f '*.rpm') $(find scripts -name '*.tar.gz'); do
             filename=${f##*/}
             key=nightly/${filename}
             ./qshell rput --overwrite ${QINIU_BUCKET} ${key} ${f}
