--- a/.github/workflows/build-cross.yml
+++ b/.github/workflows/build-cross.yml
@@ -15,7 +15,7 @@ jobs:
           - arm-unknown-linux-musleabihf
           - armv7-unknown-linux-musleabihf
           - aarch64-unknown-linux-musl
-          - riscv64gc-unknown-linux-musl
+          # - riscv64gc-unknown-linux-musl
           - i586-unknown-linux-musl
           - x86_64-unknown-linux-musl
     steps:
